<resources>
    <string name="app_name">BoardGameSocial</string>
    <!-- Strings used for nav (action/tool)bar -->
    <string name="profile_option_title">Profile</string>
    <string name="logout_option_title">Logout</string>
    <string name="home_option_title">Home</string>
    <string name="games_option_title">Games</string>
    <string name="events_option_title">Events</string>
    <string name="search_option_title">Search</string>
    <string name="chat_option_title">Chat</string>
    <!-- Strings used for post_item -->
    <string name="item_textView_posterPlaceHolder">Poster\'s Name</string>
    <string name="item_textView_postTypePlaceHolder">Post Type</string>
    <string name="item_textView_postBodyPlaceHolder">post body goes here</string>
    <string name="item_textView_numberLikesPlaceholder">42</string>
    <string name="item_button_text">more</string>
    <!-- Strings used for login and signup -->
    <string name="et_hint_password">Password</string>
    <string name="et_hint_username">Username</string>
    <string name="et_hint_firstname">First Name</string>
    <string name="et_hint_lastname">Last Name</string>
    <string name="et_hint_email">Email</string>
    <string name="btn_login">login</string>
    <string name="new_user_sign_up">New user? sign-up!</string>
    <string name="btn_register">register</string>
    <string name="already_a_user_sign_in">Already a user? sign-in!</string>

    <!-- Strings used for Games Collection -->
    <string name="tv_games_collection">Games Collection</string>
    <string name="game_items_tv_title">Game title</string>
    <string name="game_items_tv_genre">Genre</string>
    <string name="game_item_tv_min_players">Min players: 2</string>
    <string name="game_item_tv_max_players">Max players: 4</string>
    <string name="game_item_tv_overall_play_count">Overall play count: 10</string>
    <string name="game_items_tv_description">Description</string>
    <string name="game_min_player_text">Min players: %1$d</string>
    <string name="game_max_player_text">Max players: %1$d</string>
    <string name="game_overall_play_count_text">Overall play count: %1$d</string>
    <string name="game_seats_available_text">Seats available: %1$d</string>

    <!-- Strings used for Add Game -->
    <string name="et_hint_game_title">Game title</string>
    <string name="et_hint_game_genre">Game genre</string>
    <string name="et_game_players">Players:</string>
    <string name="et_hint_game_min_players">Min</string>
    <string name="et_hint_game_max_players">Max</string>
    <string name="et_hint_game_overall_play_count">Overall play count</string>
    <string name="et_hint_game_description">Game description</string>
    <string name="et_hint_game_image_url">Game image url</string>

    <string name="title_activity_app">AppActivity</string>
    <string name="title_activity_home_post">HomePostActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_games_collection">GamesCollectionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main_app">MainAppActivity</string>
    <string name="title_activity_login_and_sign_up1">LoginAndSignUpActivity1</string>
    <!-- temp placeholders for nav -->
    <string name="title_fragment_edit_profile">Edit Profile Fragment</string>
    <string name="title_fragment_search">Search Fragment</string>
    <string name="title_fragment_game_collection">Game Collection Fragment</string>
    <string name="title_fragment_events">Events Fragment</string>
    <string name="title_fragment_add_post">Add Post</string>
    <!-- Strings used for fragment_profile -->
    <string name="profile_first_name_placeholder">firstName</string>
    <string name="profile_username_placeholder">username</string>
    <string name="profile_btn_edit">edit profile</string>
    <string name="profile_bio_placeholder">user biography</string>
    <string name="profile_btn_view_friends">view %1$s\'s friends</string>
    <string name="profile_btn_view_user_gamelist">view %1$s\'s gamelist</string>
    <string name="btn_text_sign_in">sign in</string>
    <string name="btn_text_sign_up">sign up</string>
    <string name="title_activity_mvvm_test">MvvmTest</string>

    <!-- Strings used for event-fragments -->
    <string name="et_hint_event_name">Event name</string>
    <string name="et_hint_date_time">Event date</string>
    <string name="et_hint_event_description">Event description</string>
    <string name="tv_add_event">Add Event</string>
    <string name="btn_single_event_hosted_games">Hosted Games</string>
    <string name="btn_single_event_people_in_event">People in event</string>
    <string name="key_event_name">EVENT_NAME</string>
    <string name="key_event_date_time">EVENT_DATE_TIME</string>
    <string name="key_event_description">EVENT_DESCRIPTION</string>


    <!-- Strings used in search-page -->
    <string name="search_hint">Enter a name or keywords...</string>
    <string-array name="search_options">
        <item>Games</item>
        <item>People</item>
        <item>Events</item>

    </string-array>

    <!-- Strings used for hosted games in an event -->
    <string name="tv_event_hosted_games">Hosted games from the event</string>
    <string name="tv_seats_available">Seats available: 10</string>
    <string name="btn_title_join_game">Join game</string>
    <string name="VH_user_name">Username</string>
    <string name="VH_user_image_des">user_image</string>

    <string name="tv_title_people_in_event">People in the event</string>
    <string name="tv_title_add_game_review">Add Game Review</string>
    <string name="tv_title_game_review">Game reviews</string>
    <string name="VH_game_review">Game review</string>
    <string name="et_hint_game_review_content">Write your review here…</string>
    <string name="review_save">Save</string>
    <string name="no_game_reviews_added_yet">No Game Reviews added yet</string>


    <!-- Common string -->
    <string name="btn_text_save">save</string>
    <string name="item_button_delete">delete</string>
    <string name="tv_add_new_game">Add New Game</string>
    <string name="cx_text_create_a_private_game">Create a private game?</string>
    <string name="search">Search</string>


    <!-- Strings used for fragment_add_post -->
    <string name="add_post_view_setting_label">View Setting:</string>
    <string name="add_post_view_private">Private</string>
    <string name="add_post_view_public">Public</string>
    <string name="add_post_view_error">Please select a view setting and try again.</string>
    <string name="add_post_type_label">Post Type:</string>
    <string name="add_post_spinner_placeholder"> - Select Post Type - </string>
    <string-array name="post_types">
        <item> - Select Post Type - </item>
        <item>General</item>
        <item>Event Shoutout</item>
    </string-array>
    <string name="add_post_type_error">Please select a post type and try again.</string>
    <string name="add_post_body_label">Body:</string>
    <string name="add_post_body_hint">Add Post Body</string>
    <string name="add_post_body_error">Please add a body to your post and try again.</string>
    <string name="add_post_btn_add_post">Add Post</string>
    <string name="add_post_error">Unable to create post. Please try again later.</string>
    <string name="add_post_success">Post created.</string>

    <!--  Strings used for fragment_edit_profile  -->
    <string name="edit_profile_greeting">Hello, %1$s!</string>
    <string name="edit_profile_btn_edit_icon">edit icon</string>
    <string name="edit_profile_username_label">username:</string>
    <string name="edit_profile_current_username">current username</string>
    <string name="edit_profile_username_hint">new username</string>
    <string name="edit_profile_btn_edit_username">edit username</string>
    <string name="edit_profile_password_label">password:</string>
    <string name="edit_profile_password_asterisks">******</string>
    <string name="edit_profile_password_hint">new password</string>
    <string name="edit_profile_password_confirm_hint">confirm password</string>
    <string name="edit_profile_btn_edit_password">edit password</string>
    <string name="edit_profile_bio_label">bio:</string>
    <string name="edit_profile_current_bio">placeholder</string>
    <string name="edit_profile_btn_edit_bio">edit bio</string>
    <string name="edit_profile_btn_delete_account">delete account</string>
    <string name="imageView_contentDescription">user icon</string>
    <!--  Strings used for popup_window  -->
    <string name="popup_type_warning">-- Warning --</string>
    <string name="delete_acc_title">Delete Account Chosen</string>
    <string name="delete_acc_warning">You are about to delete your Movie Social account.</string>
    <string name="delete_acc_confirm">Yes, delete account</string>
    <string name="delete_acc_deny">No, keep account</string>
    <string name="popup_continue_msg">Do you want to continue?</string>
    <!-- Strings used for comment_item -->
    <string name="comment_item_textView_posterPlaceHolder">Commenter\'s Name</string>
    <string name="comment_item_textView_postBodyPlaceHolder">Comment body goes here</string>
    <string name="comment_hint">Add a comment. . .</string>
    <!--  edit icon fragment  -->
    <string name="title_activity_edit_icon_fragment">EditIconFragment</string>
    <string name="edit_icon_title">Choose your icon:</string>
    <string name="icon1">icon1</string>
    <string name="icon2">icon2</string>
    <string name="icon3">icon3</string>
    <string name="icon4">icon4</string>
    <string name="icon5">icon5</string>
    <string name="icon6">icon6</string>
</resources>