<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_option"
        android:title="@string/home_option_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/games_option"
        android:title="@string/games_option_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/search_option"
        android:title="@string/search_option_title"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/profile_option"
        android:title="profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout_option"
        android:title="logout"
        app:showAsAction="never" />
</menu>