<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:backgroundTint="@color/very_light_tangelo">



        <Button
            android:id="@+id/item_button"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:onClick="favoriteQuote"
            android:text="@string/item_button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/item_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/item_button"
            android:maxLines="1"
            android:text="@string/item_textView_posterPlaceHolder"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/item_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/item_button"
            android:layout_below="@id/item_poster"
            android:maxLines="1"
            android:text="@string/item_textView_postTypePlaceHolder"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/item_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_type"
            android:text="@string/item_textView_postBodyPlaceHolder"
            android:maxLines="4"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>